<resources>
    <string name="app_name">浙工健行</string>
    <string name="welcome_text">Welcome</string>
    <string name="user_account_text">请输入学号</string>
    <string name="user_password_text">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="logout_text">退出登录</string>
    <string name="user_id_text">学号：</string>
    <string name="user_name_text">姓名：</string>
    <string name="user_sex_text">性别：</string>
    <string name="device_scan_text">搜索附近手环</string>
    <string name="app_info_text">关于浙工健行</string>
    <string name="distance_unit_text">米</string>
    <string name="time_span_text">时长</string>
    <string name="speed_text">速度</string>
    <string name="start_run_text">开始运动</string>
    <string name="finish_run_text">结束运动</string>
    <string name="device_manage_text">手环管理</string>
    <string name="password_modify_text">修改密码</string>
    <string name="fun_disconnect_text">断开连接</string>
    <string name="fun_hr_detect_mode_text">心率监测管理</string>
    <string name="sync_steps_text">同步手环数据</string>
    <string name="test_text">系统测试</string>
    <string name="old_password_text">请输入旧密码</string>
    <string name="new_password_text">请输入新密码</string>
    <string name="new_password_again_text">请确认新密码</string>
    <string name="confirm_text">确定</string>
</resources>
