<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/module_title" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"
        android:src="@mipmap/run" />

    <EditText
        android:id="@+id/old_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/old_password_text"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/new_password_text"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_password_again_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/new_password_again_text"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/password_modify_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_text" />

</LinearLayout>