<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/colorPrimary"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_profile" />

    <TextView
        android:id="@+id/sex_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/user_sex_text"
        android:textColor="#FFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sex_text_view"
        android:text="@string/user_name_text"
        android:textColor="#FFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sid_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/name_text_view"
        android:text="@string/user_id_text"
        android:textColor="#FFF"
        android:textSize="14sp" />

</RelativeLayout>