<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/device_manage_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_device" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/device_manage_text"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_modify_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_security" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/password_modify_text"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/app_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_app_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/app_info_text"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_exit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/logout_text"
                android:textColor="#FF1493"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/test_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/test_text"
                android:textColor="#ABCDAB"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
