<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#696969"
    android:gravity="center"
    android:orientation="vertical">

    <include layout="@layout/module_title" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.baidu.mapapi.map.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/zoom_image_view"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:alpha="0.7"
            android:src="@drawable/ic_zoom_big" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/distance_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="45sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_unit_text"
                    android:textSize="20sp" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_span_text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/time_span_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00:00:00"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed_text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/speed_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0 km/h"
                        android:textSize="20sp" />

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/control_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/start_run_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:background="@drawable/button"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/start_run_text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/finish_run_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/button"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/finish_run_text"
                android:textSize="20sp" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/search_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_above="@+id/control_layout"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/search_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="GPS信号搜索中，请稍后..."
                android:textColor="@android:color/black" />

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/search_text_view"
                android:paddingEnd="5dp"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>